force-app/main/default/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Physical_Mail_Risk_Acknowledgement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>I acknowledge that transmitting personal information via mail comes with inherent risks including the risk that the information will be exposed to unauthorized individuals. I understand the risks associated with my chosen method for receiving information pertaining to my request and accept responsibility for any unauthorized access occurring after Pearson Online &amp; Blending Learning sends my information in the chosen method.</description>
        <inlineHelpText>Consumer acknowledges risks inherent in choosing to have their information report delivered via physical mail</inlineHelpText>
        <label>Physical Mail Risk Acknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ticket_Platform</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Privacy_Request_Stage__c</fullName>
        <description>Stages through which a privacy request goes.</description>
        <label>Privacy Request Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Verify</fullName>
                </value>
                <value>
                    <fullName>Execute</fullName>
                </value>
                <value>
                    <fullName>Deliver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Privacy_Request_Type__c</fullName>
        <description>What type of privacy request the consumer made. The options are currently driven by CCPA but may expand in the future.</description>
        <label>Privacy Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Information Categories</fullName>
                </value>
                <value>
                    <fullName>Information Report</fullName>
                </value>
                <value>
                    <fullName>Deletion</fullName>
                </value>
                <value>
                    <fullName>Do Not Sell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ADO #130479 - To identify the Private Cases</description>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_of_Affected_User__c</fullName>
        <description>US # 122484 ,In MVP we are unable to append users records as affectees this field will be where a support agent can attatch the URL of the affected Users profile to a case..</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Profile of Affected User</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program Enrollment</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>hed__Program_Enrollment__c.hed__Contact__c</field>
                <operation>equals</operation>
                <valueField>$Source.ContactId</valueField>
            </filterItems>
            <filterItems>
                <field>hed__Program_Enrollment__c.hed__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Subject__c</fullName>
        <description>Declaration under penalty of perjury that the consumer has the right to make this request</description>
        <inlineHelpText>Declaration under penalty of perjury that the consumer has the right to make this request</inlineHelpText>
        <label>Relationship to Subject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Authorized Agent of Consumer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Delivery_Address__c</fullName>
        <description>If the consumer wants their information report delivered on a dead tree, mail it to this address.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If the consumer wants their information report delivered on a dead tree, mail it to this address.</inlineHelpText>
        <label>Report Delivery Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Delivery_Format__c</fullName>
        <inlineHelpText>In what format does the consumer want to receive the report of their personal information, if applicable?</inlineHelpText>
        <label>Report Delivery Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Physical Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Course__c</fullName>
        <description>US #122484 -This field is used to identify a desired course to replace an existing ST course per CTs request.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Requested Course</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Grade__c</fullName>
        <description>US #122484 -This Picklist allows for identification of a desired grade when a CT submitting a grade change request for their ST.</description>
        <label>Requested Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>k</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Service__c</fullName>
        <description>ADO #147629 - (Page Layouts for Case Management and Validation Rules)
School/Service Picklist</description>
        <label>School/Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACA</fullName>
                </value>
                <value>
                    <fullName>ARCA</fullName>
                </value>
                <value>
                    <fullName>CalCA(All California Schools)</fullName>
                </value>
                <value>
                    <fullName>GRCA</fullName>
                </value>
                <value>
                    <fullName>Sub Staffing Services</fullName>
                </value>
                <value>
                    <fullName>Teaching Services</fullName>
                </value>
                <value>
                    <fullName>Therapy</fullName>
                </value>
                <value>
                    <fullName>TNCA</fullName>
                </value>
                <value>
                    <fullName>Tutoring Services</fullName>
                </value>
                <value>
                    <fullName>WACA</fullName>
                </value>
                <value>
                    <fullName>WYCA.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Year__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <description>School to be associated for the respective case -for case visibility</description>
        <label>School</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Schools</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Screenshot_attached_if_applicable__c</fullName>
        <description>US #122484 - The field indicates that should attach the any applicable screen shots ,while Case creation.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Screenshot if applicable</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Semester__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Semester</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_to_ADO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is a checkbox field that is being used to flag the ticket as pushed to the ADO system.</description>
        <label>Sent to ADO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Slide__c</fullName>
        <description>US # 122484 - The Triage Team requires the ability to replicate the conditions under which an error occurred to reproduce the issue this picklist identifies the specific slide within the lesson in which the issue occured.</description>
        <label>Slide</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Software_updates__c</fullName>
        <description>US #122484 - Escalated Live Lesson issues require the Application Management Team to replicate the issue in order to do that confirmation of any relevant software updates to windows or the Adobe Connect software must be recorded and passed when escalating.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Software updates</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Staff_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ADO #168729 - Lookup field &apos;Staff Assignee&apos; which should lookup only the staff record type contacts. To Assign the respective staff to the Case.</description>
        <label>Staff Assignee</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please Select the School Staff User.</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>School Staff</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Pre-Approved</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Steps_to_recreate__c</fullName>
        <description>US #122484 -  The ability to replicate the conditions under which an error occurred to reproduce the issue this field identifies these exact steps.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Steps to recreate</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Stage__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New Applicant Call</fullName>
                </value>
                <value>
                    <fullName>Enrollment Push</fullName>
                </value>
                <value>
                    <fullName>Withdrawal DEP</fullName>
                </value>
                <value>
                    <fullName>Document Follow-up</fullName>
                </value>
                <value>
                    <fullName>Final Confirmation</fullName>
                </value>
                <value>
                    <fullName>Change of Address/POR</fullName>
                </value>
                <value>
                    <fullName>Custody Issue</fullName>
                </value>
                <value>
                    <fullName>Extension/Exception Requests</fullName>
                </value>
                <value>
                    <fullName>Re-enrollment</fullName>
                </value>
                <value>
                    <fullName>Account Registration</fullName>
                </value>
                <value>
                    <fullName>Outreach and Marketing</fullName>
                </value>
                <value>
                    <fullName>Log In Access</fullName>
                </value>
                <value>
                    <fullName>NES Guidance</fullName>
                </value>
                <value>
                    <fullName>Update Contact Information</fullName>
                </value>
                <value>
                    <fullName>Reactivation</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Log in Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_Name__c</fullName>
        <description>The person the privacy request is for, if that person is not the requester (generally, this will be the student&apos;s name).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Team__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Support Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_of_Origin__c</fullName>
        <description>ADO #146813 - Support Agent to designate a case as Pre or Post Enrollment</description>
        <label>System of Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Enrollment</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ticket_Age__c</fullName>
        <description>Created to display the Ticket Age (Current Date - Ticket&apos;s Created Date) and using in the Reports as part of US # 168922</description>
        <formula>VALUE(IF(OR(ISPICKVAL(Status, &quot;Closed&quot;),ISPICKVAL(Status, &quot;Closed - No Contact Needed&quot;),ISPICKVAL(Status, &quot;Closed - Unable to Contact&quot;)), &quot;&quot;, TEXT(NOW()- CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ticket_Sub_Type__c</fullName>
        <description>ADO #164365 - Ticket Sub - Type Values to be associated for the respective case - for case visibility.</description>
        <label>Ticket Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Ticket_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Ticket_Sub_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ticket_Type__c</fullName>
        <description>ADO #164365 - Ticket Type Values to be associated for the respective case - for case visibility.</description>
        <label>Ticket Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Extension/Exception Requests</fullName>
                </value>
                <value>
                    <fullName>File/Access Permissions</fullName>
                </value>
                <value>
                    <fullName>Follow-up</fullName>
                </value>
                <value>
                    <fullName>Formative Assessments</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Google Apps</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Homeless</fullName>
                </value>
                <value>
                    <fullName>Household Account Assistance</fullName>
                </value>
                <value>
                    <fullName>Human Resources Inquiry</fullName>
                </value>
                <value>
                    <fullName>IEP</fullName>
                    <label>IEP Software</label>
                </value>
                <value>
                    <fullName>Internal Only-Issue Document Creation</fullName>
                </value>
                <value>
                    <fullName>Internet Filtering/Security</fullName>
                </value>
                <value>
                    <fullName>Jive</fullName>
                </value>
                <value>
                    <fullName>LEAP</fullName>
                </value>
                <value>
                    <fullName>LiveLesson</fullName>
                </value>
                <value>
                    <fullName>Login</fullName>
                </value>
                <value>
                    <fullName>Materials and Technology</fullName>
                </value>
                <value>
                    <fullName>Message Boards</fullName>
                </value>
                <value>
                    <fullName>Network &amp; Connectivity</fullName>
                </value>
                <value>
                    <fullName>New Computer Setup</fullName>
                </value>
                <value>
                    <fullName>Training/Orientation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outbound Phone Call-Left Message</fullName>
                </value>
                <value>
                    <fullName>Password Reset</fullName>
                </value>
                <value>
                    <fullName>Phone Hardware/Application Support</fullName>
                </value>
                <value>
                    <fullName>Placement Changes</fullName>
                </value>
                <value>
                    <fullName>Placement Recommendation Needed</fullName>
                </value>
                <value>
                    <fullName>Post-Enrollment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL_of_Room_being_accessed__c</fullName>
        <description>US # 122484 -Escalated Live Lesson issues require the Application Management Team to replicate the issue in order to do that the URL for the Live Lesson room in which the issue is occuring must be recorded and passed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>URL of Room being accessed</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <description>US #122484 -The Triage Team requires the ability to replicate the conditions under which an error occurred to reproduce the issue this field identifies the Unit number where the issue occurred.</description>
        <label>Unit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <description>User ID in Connexus v2 or Buzz.</description>
        <label>Subject User ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Profile_Link__c</fullName>
        <description>Link to (v2) user profile.</description>
        <formula>IF(AND(ISPICKVAL(Platform__c, &quot;Connexus v2&quot;), User_ID__c &gt; 0), &quot;https://www.connexus.com/webuser/overview.aspx?idWebuser=&quot; &amp; TEXT(User_ID__c), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only appears if the Platform is Connexus v2 and the Subject User ID is filled out.</inlineHelpText>
        <label>User Profile Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verification_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Verification Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Verified_Privacy_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you have verified the consumer&apos;s identity and that they have the right to make the request.</description>
        <label>Verified Privacy Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Withdrawal_Date__c</fullName>
        <description>ADO #130815 - (Case Management KBA)
Used in Fullfillment layout</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Withdrawal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Category__c</fullName>
        <description>The type of Case being tracked.</description>
        <inlineHelpText>The type of Case being tracked.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>School Code of Conduct</fullName>
                </value>
                <value>
                    <fullName>School Violation</fullName>
                </value>
                <value>
                    <fullName>State Offense</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Location__c</fullName>
        <description>The location where the Case took place.</description>
        <inlineHelpText>The location where the Case took place.</inlineHelpText>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Off Campus</fullName>
                </value>
                <value>
                    <fullName>On Campus</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Occurrence_Date__c</fullName>
        <description>The date and time when the behavior event that triggered the Case occurred.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date and time when the behavior event that triggered the Case occurred.</inlineHelpText>
        <label>Occurrence Date</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>Academic_Placement_Support_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Ticket_Type__c</columns>
        <columns>Ticket_Sub_Type__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Academic Placement Support Queue</label>
        <queue>Academic_Placement_Support_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Ticket_Type__c</columns>
        <columns>Ticket_Sub_Type__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>School__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Tickets</label>
    </listViews>
    <listViews>
        <fullName>All_Tickets1</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Manager_Review__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Escalation</value>
        </filters>
        <label>All Tickets</label>
    </listViews>
    <listViews>
        <fullName>Application_Management_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Application Management Queue</label>
        <queue>Application_Management_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_My_Open_Tickets_Public</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Ticket_Type__c</columns>
        <columns>Ticket_Sub_Type__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Closed - No Contact Needed,Closed - Unable to Contact</value>
        </filters>
        <filters>
            <field>Internal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>CS My Open Tickets - Public</label>
    </listViews>
    <listViews>
        <fullName>Customer_Care_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notContain</operation>
            <value>Closed,Closed - No Contact Needed,Closed - Unable to Contact</value>
        </filters>
        <label>Customer Care Queue</label>
        <queue>Customer_Care_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_Privacy_Request_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Ticket_Type__c</columns>
        <columns>Ticket_Sub_Type__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>New_Comment_Added__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Data Privacy Request Queue</label>
        <queue>Data_Privacy_Request_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Document_Followup_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Ticket_Type__c</columns>
        <columns>Ticket_Sub_Type__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>New_Comment_Added__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Document Followup Queue</label>
        <queue>Document_Followup_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Document_Verification_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Document Verification</label>
        <queue>Document_Verification</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Email_cases_and_Today_cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email</value>
        </filters>
        <filters>
            <field>CASES.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Email cases and Today cases</label>
    </listViews>
    <listViews>
        <fullName>Enrollment_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Enrollment Queue</label>
        <queue>Enrollment</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Enrollment_Support_Queue_Case</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Ticket_Type__c</columns>
        <columns>Ticket_Sub_Type__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Closed - No Contact Needed,Closed - Unable to Contact</value>
        </filters>
        <filters>
            <field>Ticket_Type__c</field>
            <operation>notEqual</operation>
            <value>Invalid Document Call</value>
        </filters>
        <label>Enrollment Support Queue</label>
        <queue>Enrollment_Support_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>